@@ -1,4 +1,7 @@
 2005-04-25 Benoit Grégoire  <bock@step.polymtl.ca>
+	* ContentGroup.php:  Make bad selection mode eror non-fatal.
+
+2005-04-25 Benoit Grégoire  <bock@step.polymtl.ca>
 	* Fix bug in ContentGroup enumeration
 
 2005-04-25 François Proulx <francois.proulx@gmail.com>
